mobile interface cleanup

--- a/app/views/mobile/index.html.erb
+++ b/app/views/mobile/index.html.erb
@@ -2,7 +2,7 @@
   <li><%= link_to "Roster", mobile_members_path %></li>
   <li><%= link_to "DO: #{@do.last_name}", mobile_member_path(@do) %></li>
   <li><%= link_to "Status Line", mobile_status_path %></li>
-  <li><%= link_to "Paging", mobile_paging_path %></li>
+  <li><%= link_to "Send Page", mobile_paging_path %></li>
   <li><%= link_to "Unit Message Log", mobile_messages_path %></li>
   <li><%= link_to @inbox_label, mobile_inbox_path %></li>
 </div>
