--- a/app/views/mobile/members/show.html.erb
+++ b/app/views/mobile/members/show.html.erb
@@ -3,3 +3,5 @@
 <%= raw display_phones(@member)   %>
 <%= raw display_emails(@member)   %>
 <%= raw display_photos(@member)   %>
+<%= raw display_emergency_contacts(@member) %>
+<%= raw display_ham_v9(@member) %>
