--- a/app/views/mobile/about.html.erb
+++ b/app/views/mobile/about.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag "mobile/mobile_about.js" %>
+<%= javascript_include_tag "mobile/mobile_about" %>
 
 Use BAMRU Mobile on Android, iPhone, iPad, or BlackBerry/Opera.
 <p></p>
