--- a/app/views/mobile/index.html.erb
+++ b/app/views/mobile/index.html.erb
@@ -1,8 +1,10 @@
+<%= javascript_include_tag "mobile_inbox_label" %>
+
 <div data-role="listview" data-inset="true" data-theme="c">
   <li><%= link_to "Roster", mobile_members_path %></li>
   <li><%= link_to "DO: #{@do.last_name}", mobile_member_path(@do) %></li>
   <li><%= link_to "Status Line", mobile_status_path %></li>
   <li><%= link_to "Send Page", mobile_paging_path %></li>
   <li><%= link_to "Unit Message Log", mobile_messages_path %></li>
-  <li><%= link_to @inbox_label, mobile_inbox_path %></li>
+  <li><%= link_to raw("<span id='inbox-label'>#{@inbox_label}</span>"), mobile_inbox_path %></li>
 </div>
