--- a/app/views/home/mobile.html.erb
+++ b/app/views/home/mobile.html.erb
@@ -1,11 +1,13 @@
-<h2>BAMRU Mobile ( BETA )</h2>
+<h2>BAMRU Mobile ( ALPHA )</h2>
 <p></p>
 BAMRU Mobile is designed for Android, iPhone, iPad, and BlackBerry.
 <p></p>
-This is new.  We need to build experience to understand how Mobile can work best for SAR.
+This is a prototype.  It works fine on wifi, but not so great when network coverage is poor.
+<p></p>
+Low-network performance will improve in the next version.
 <p></p>
 Visit <%= link_to mobile_url, mobile_path %> with your mobile browser, and give it a try!
 <p></p>
-Let Andy know if you spot problem or have ideas for enhancements.
+Let Andy know if you spot problems or have ideas for enhancements.
 <p></p>
 <%= image_tag("qrcode.png") %>
