--- a/app/views/jqm/index.html.erb
+++ b/app/views/jqm/index.html.erb
@@ -18,7 +18,15 @@
 <%= page_end %>
 
 <%= page_start "status", "Status Line" %>
-  STATUS LINE
+  <div style='text-align: center;'>
+  BAMRU Status Line
+  <p></p>
+  <b>650-858-4618</b>
+  <p></p>
+  <% if @phone %>
+    <a href='tel:650-858-4618' data-role='button' data-ajax="false">Dial</a>
+  <% end %>
+  </div>
 <%= page_end %>
 
 <%= page_start "send-page", "Send Page" %>
