jqm offline works

--- a/app/views/jqm/index.html.erb
+++ b/app/views/jqm/index.html.erb
@@ -6,6 +6,9 @@
     <li><%= link_to "Send Page",            "#send-page"   %></li>
     <li><%= link_to "Unit Message Log",     "#message-log" %></li>
     <li><%= link_to "My Inbox",             "#inbox"       %></li>
+    <div style='text-align: center;'>
+      <span id=state></span>
+    </div>
   </div>
 <%= page_end %>
 
