--- a/app/views/mobile1/about.html.erb
+++ b/app/views/mobile1/about.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag "mobile/mobile_about" %>
+<%= javascript_include_tag "mobile1/mobile_about" %>
 
 Use BAMRU Mobile on Android, iPhone, iPad, or BlackBerry/Opera.
 <p></p>
@@ -22,7 +22,7 @@ Use BAMRU Mobile on Android, iPhone, iPad, or BlackBerry/Opera.
   </tr>
   <tr id="map_button">
     <td colspan=2>
-      <a href='/mobile/map' data-role='button' data-ajax="false">My Location</a>
+      <a href='/mobile1/map' data-role='button' data-ajax="false">My Location</a>
     </td>
   </tr>
 </table>
