--- a/app/views/mobile1/inbox.html.erb
+++ b/app/views/mobile1/inbox.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag "mobile/mobile_markall" %>
+<%= javascript_include_tag "mobile1/mobile_markall" %>
 
 
 <% if current_member.distributions.unread.count != 0 %>
