--- a/app/views/mobile1/members/index.html.erb
+++ b/app/views/mobile1/members/index.html.erb
@@ -1,5 +1,5 @@
 <div data-role="listview" data-inset="true" data-theme="c" data-filter="true" data-filter-placeholder="Find member...">
   <% @members.each do |mem| %>
-    <li><%= link_to mem.full_name, mobile_member_path(mem) %></li>
+    <li><%= link_to mem.full_name, mobile1_member_path(mem) %></li>
   <% end %>
 </div>
