--- a/app/views/mobile1/paging.html.erb
+++ b/app/views/mobile1/paging.html.erb
@@ -1,7 +1,7 @@
-<%= javascript_include_tag "mobile/mobile_paging" %>
+<%= javascript_include_tag "mobile1/mobile_paging" %>
 <%= javascript_tag "var PREVIEW_OPTS = {name: '#{current_member.last_name}'};" %>
 
-<form action='/mobile/send_page' method='POST'>
+<form action='/mobile1/send_page' method='POST'>
 
   <div id="select">
 
