--- a/app/views/home/mobile.html.erb
+++ b/app/views/home/mobile.html.erb
@@ -1,13 +1,26 @@
 <h2>BAMRU Mobile ( ALPHA )</h2>
 <p></p>
-BAMRU Mobile is designed for Android, iPhone, iPad, and BlackBerry.
+BAMRU Mobile is designed for Android, iPhone, iPad, iPod, and BlackBerry.
 <p></p>
-This is a prototype.  It works fine on wifi, but not so great when network coverage is poor.
+You can run these prototypes from any mobile or desktop browser.
 <p></p>
-Low-network performance will improve in the next version.
+Let Andy know if you spot problems or have ideas for improvement.
 <p></p>
-Visit <%= link_to mobile_url, mobile_path %> with your mobile browser, and give it a try!
-<p></p>
-Let Andy know if you spot problems or have ideas for enhancements.
-<p></p>
-<%= image_tag("qrcode.png") %>
+<table width=100%>
+  <tr>
+    <td>
+      <b>Prototype 1</b><br/>
+      Works fine on wifi, but not so great when network coverage is poor.<br/>
+      Status: Finished<br/>
+      <%= image_tag("mobile1.png") %><br/>
+      <%= link_to mobile1_url, mobile1_path %>
+    </td>
+    <td>
+      <b>Prototype 2</b><br/>
+      Handles disconnected operation and low-quality networking.<br/>
+      Status: Under Active Development<br/>
+      <%= image_tag("mobile2.png") %><br/>
+      <%= link_to mobile2_url, mobile2_path %>
+    </td>
+  </tr>
+</table>
