--- a/app/views/layouts/mobile2.html.erb
+++ b/app/views/layouts/mobile2.html.erb
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html manifest="/jqm_mobile.manifest">
+<!--<html manifest="/jqm_mobile.manifest">-->
+<html>
 <head>
-  <title>BAMRU.net 2</title>
+  <title>BAMRU Mobile 2</title>
   <link href='<%= raw favicon_file %>' rel='shortcut icon' type='image/vnd.microsoft.icon'/>
   <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0rc1/jquery.mobile-1.0rc1.min.css" />
   <script src="http://code.jquery.com/jquery-1.6.2.min.js"></script>
   <script src="http://code.jquery.com/mobile/1.0rc1/jquery.mobile-1.0rc1.min.js"></script>
+  <%= javascript_include_tag "underscore-min.js" %>
+  <%= javascript_include_tag "backbone-min.js" %>
   <%= javascript_include_tag "mobile2/all_mobile2" %>
   <meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1">
 
