mobile2 using backbone for roster and member view

--- a/app/views/home/mobile.html.erb
+++ b/app/views/home/mobile.html.erb
@@ -18,7 +18,7 @@ Let Andy know if you spot problems or have ideas for improvement.
     <td>
       <b>Prototype 2</b><br/>
       Handles disconnected operation and low-quality networking.<br/>
-      Status: Under Active Development<br/>
+      Status: Work In Progress<br/>
       <%= image_tag("mobile2.png") %><br/>
       <%= link_to mobile2_url, mobile2_path %>
     </td>
