cleaned up mobile2 directories

--- a/app/views/home/mobile.html.erb
+++ b/app/views/home/mobile.html.erb
@@ -2,7 +2,7 @@
 <p></p>
 BAMRU Mobile is designed for Android, iPhone, iPad, iPod, and BlackBerry.
 <p></p>
-You can run these prototypes from any mobile or desktop browser.
+You can also run on your desktop, using a new version of Chrome or Firefox.
 <p></p>
 Let Andy know if you spot problems or have ideas for improvement.
 <p></p>
