added phone and email display for mobile2

--- a/app/views/mobile2/index.html.erb
+++ b/app/views/mobile2/index.html.erb
@@ -27,7 +27,11 @@
 
 <%= page_start "member", "Member Detail" %>
 <div id="member_show">
-  Member Detail (Under Construction)
+    <b>Some Name</b> - Role
+    <div data-role="listview" data-inset="true" data-theme="c">
+    <li data-role="list-divider">Phones</li>
+    <li>phone value</li>
+    </div>
 </div>
 <%= page_end %>
 
