added fix for android routes

--- a/app/views/layouts/mobile2.html.erb
+++ b/app/views/layouts/mobile2.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html manifest="/jqm_mobile.manifest">
-<!--<html>-->
+<!--<html manifest="/jqm_mobile.manifest">-->
+<html>
 <head>
   <title>BAMRU Mobile 2</title>
   <link href='<%= raw favicon_file %>' rel='shortcut icon' type='image/vnd.microsoft.icon'/>
