another jqm routing fix

--- a/app/views/mobile2/index.html.erb
+++ b/app/views/mobile2/index.html.erb
@@ -26,11 +26,7 @@
 
 <%= page_start "member", "Member Detail" %>
 <div id="member_show">
-  <b>Placeholder Name</b> - Role
-  <div data-role="listview" data-inset="true" data-theme="c">
-    <li data-role="list-divider">Phones</li>
-    <li>phone value</li>
-  </div>
+  <a href="#roster">Select a member...</a>
 </div>
 <%= page_end %>
 
@@ -58,12 +54,8 @@
 
 <%= page_start "message", "Message Detail" %>
 <div id='message_show'>
-  MESSAGE DATA HERE
+  <a href="#message-log">Select a message...</a>
 </div>
-<%= page_end %>
-
-<%= page_start id="" "message-show", "Message Log" %>
-  MESSAGE LOG (Under Construction)
 <%= page_end %>
 
 <%= page_start "inbox", "Inbox" %>
