--- a/app/views/layouts/mobile2.html.erb
+++ b/app/views/layouts/mobile2.html.erb
@@ -4,6 +4,9 @@
   <title>BAMRU Mobile 2</title>
   <link href='<%= raw favicon_file %>' rel='shortcut icon' type='image/vnd.microsoft.icon'/>
   <link rel="stylesheet" href="/stylesheets/jquery.mobile-1.0rc1.css" />
+  <script>
+    window.myid = "<%= current_member.id %>";
+  </script>
   <%= javascript_include_tag "mobile2/all_mobile2" %>
   <meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1">
 
