--- a/app/views/mobile2/index.html.erb
+++ b/app/views/mobile2/index.html.erb
@@ -1,5 +1,5 @@
 <script>
-  window.members = new Members(<%= raw MemberDecorator.mobile_json    %>)
+  window.members  = new Members(<%= raw MemberDecorator.mobile_json    %>)
   window.messages = new Messages(<%= raw MessageDecorator.mobile_json %>)
   window.is_phone = "<%= @is_phone ? 'true' : 'false' %>"
 </script>
@@ -59,5 +59,7 @@
 <%= page_end %>
 
 <%= page_start "inbox", "Inbox" %>
+<div id="distribution_index">
   MY INBOX (Under Construction)
+</div>
 <%= page_end %>
