removed old reports

--- a/app/views/do_assignments/index.html.erb
+++ b/app/views/do_assignments/index.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag "avail_dos_shortcut.js"        %>
+<%# javascript_include_tag "all_avail_dos"        %>
 
 <div id=x_container>
   <div id=x_header>
