--- a/app/views/inbox/index.html.erb
+++ b/app/views/inbox/index.html.erb
@@ -70,7 +70,7 @@
           <% else %>
             <td>
           <% end %>
-          If there are bounced messages, check the <b>history</b> to find out what is failing.
+          If there are <span style='background-color: pink;'>bounced messages</span>, check the <b>history</b> to find out what is failing.
           </td>
         </tr>
       </table>
