--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -56,7 +56,7 @@
             Last Mail Sync: <%=@sync_time %>
           </td>
           <td align=center>
-            <a href='#' id=resync_link>Resync Now</a> to update <b>Bounced</b> & <b>Read</b> stats.
+            <a href='#' id=resync_link>Resync Now</a> to update <b>RSVP</b> & <b>Read</b> stats.
           </td>
         </tr>
       </table>
