added green highlight to do_assign#edit

--- a/app/views/do_assignments/index.html.erb
+++ b/app/views/do_assignments/index.html.erb
@@ -25,7 +25,7 @@
       <tbody>
       <% @do_assignments.each do |a| %>
         <% if a.current? %>
-          <tr style="background-color: lightgreen;">
+          <tr style="background-color: #ccffcc;">
         <% else %>
           <tr>
         <% end %>
