--- a/app/views/do_assignments/edit.html.erb
+++ b/app/views/do_assignments/edit.html.erb
@@ -25,7 +25,11 @@
               <%= ido.hidden_field :year, :value => ado.year %>
               <%= ido.hidden_field :quarter, :value => ado.quarter %>
               <%= ido.hidden_field :week, :value => ado.week %>
-              <tr>
+              <% if ado.current? %>
+                <tr style="background-color: #ccffcc;">
+              <% else %>
+                <tr>
+              <% end %>
                 <td><%= @quarter[:year] %></td><td><%= @quarter[:quarter] %></td>
                 <td><%= ado.week%></td>
                 <td><%= ado.start_day %> - <%= ado.end_day %></td>
