changed OOT to Unavail

--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -68,7 +68,7 @@
               <p></p>
               <a href="#" id="clear_mail" class="xbutton xgray">Clear eMail <img src="/images/mail.gif" border=0></a>
               <p></p>
-              <a href="#" id="clear_oot" class="xbutton xpink">Clear OOT*</a>
+              <a href="#" id="clear_oot" class="xbutton xpink">Clear Unavail</a>
             </td>
           </tr>
         </table>
@@ -156,8 +156,6 @@
           </tr>
         </table>
       <% end %>
-      <hr>
-      <span style='font-size: 8pt;'><sup>*</sup> <b>OOT</b> means 'Out Of Town'</span>
     </div>
   </div>
 </div>
