--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -11,8 +11,8 @@
     <p></p>
     <div style="font-size: 7pt; background-color: lightgray; padding: 10px;">
       After clicking 'Create Photo', this dialog box may remain open for several
-      minutes if you are uploading a large file.  Max file size is 6MB.  Photos
-      with a height/width ratio of 4/3 will exactly fit in the photo display.
+      minutes if you are uploading a large file.  Max file size is 3MB.  Photos
+      with a width/height ratio of 4/3 will exactly fit in the photo display.
     </div>
   </div>
 </div>
