--- a/app/views/home/mobile.html.erb
+++ b/app/views/home/mobile.html.erb
@@ -2,7 +2,7 @@
 <p></p>
 BAMRU Mobile is designed for Android, iPhone, iPad, iPod, and BlackBerry.
 <p></p>
-You can also run on your desktop, using a new version of Chrome or Firefox.
+You can also test on your desktop, using a new version of Chrome or Firefox.
 <p></p>
 Let Andy know if you spot problems or have ideas for improvement.
 <p></p>
@@ -18,7 +18,8 @@ Let Andy know if you spot problems or have ideas for improvement.
     <td>
       <b>Prototype 2</b><br/>
       Handles disconnected operation and low-quality networking.<br/>
-      Status: Work In Progress<br/>
+      Mobile scrolling performance is poor with long lists. (like the roster...)<br/>
+      Status: Finished<br/>
       <%= image_tag("mobile2.png") %><br/>
       <%= link_to mobile2_url, mobile2_path %>
     </td>
