updated mobile text

--- a/app/views/home/mobile.html.erb
+++ b/app/views/home/mobile.html.erb
@@ -4,6 +4,8 @@ BAMRU Mobile is designed for Android, iPhone, iPad, iPod, and BlackBerry.
 <p></p>
 You can also test on your desktop, using a new version of Chrome or Firefox.
 <p></p>
+These prototypes are for learning new software tools and techniques.  They are not feature-complete.
+<p></p>
 Let Andy know if you spot problems or have ideas for improvement.
 <p></p>
 <table width=100%>
@@ -17,8 +19,7 @@ Let Andy know if you spot problems or have ideas for improvement.
     </td>
     <td>
       <b>Prototype 2</b><br/>
-      Handles disconnected operation and low-quality networking.<br/>
-      Mobile scrolling performance is poor with long lists. (like the roster...)<br/>
+      Works w/o network connection.  Scrolling performance is poor.<br/>
       Status: Finished<br/>
       <%= image_tag("mobile2.png") %><br/>
       <%= link_to mobile2_url, mobile2_path %>
