added background command queue

--- a/app/assets/stylesheets/members.css.scss
+++ b/app/assets/stylesheets/members.css.scss
@@ -123,7 +123,7 @@ opacity: 0.75;
 filter:alpha(opacity=75);
 }
 
-#phone_popup, #email_popup {
+#phone_popup, #email_popup, #do_popup {
 width:  400px;
 /*height: 300px;*/
 margin: 20px;
