--- a/app/views/do_assignments/edit.html.erb
+++ b/app/views/do_assignments/edit.html.erb
@@ -51,7 +51,21 @@
 
     </div>
     <div id=x_footer>
-      <%= link_to "DO Handoffs", "/do_handoffs"  %>
+      <%= link_to "DO Staffing History", "/do_handoffs"  %>
     </div>
   </div>
 </div>
+
+<div id="blanket"></div>
+<div id="do_popup">
+  Current DO: ______________<br/>
+  New DO: __________________<p></p>
+  DO Handoff requires:<br/>
+  <li>updating the county status line</li>
+  <li>updating the BAMRU status line</li>
+  <li>send a to announce the shift change to the unit</li>
+  To: From: <p></p>
+  checkbox<p></p>
+  [cancel] [send page and change do]
+</div>
+
