--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,10 @@
     </table>
   </div>
   <% if request.host.include?("ekel") %>
-    <div class="debug"><%= raw debug_footer_text %></div>
+    <div style='text-align: center;'>
+      <a href="/home/testrake">TEST RAKE</a>
+      <div class="debug"><%= raw debug_footer_text %></div>
+    </div>
   <% end %>
 </div>
 
