updated login message

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,8 +47,8 @@
   </div>
   <% if request.host.include?("ekel") %>
     <div style='text-align: center;'>
-      <a href="/home/testrake">TEST RAKE</a>
-      <div class="debug"><%= raw debug_footer_text %></div>
+
+      <div class="debug"><%= raw debug_footer_text %> - <a href="/home/testrake">TEST RAKE</a></div>
     </div>
   <% end %>
 </div>
