--- a/app/views/inbox/index.html.erb
+++ b/app/views/inbox/index.html.erb
@@ -31,7 +31,8 @@
       <table id="myTable" class="tablesorter">
         <thead>
         <th>From</th>
-        <th width=320>Message Text</th>
+        <th>Message Text</th>
+        <th>Sent At</th>
         <th align=center>Bounced?</th>
         <th align=center>Read?</th>
         <th align=center>RSVP</th>
@@ -42,6 +43,7 @@
           <tr>
             <td><%= link_to(dist.message.author.short_name, member_path(dist.message.author)) %></td>
             <td><%= dist.message.text_with_rsvp %> <%= raw mark_as_read(dist, @member)%></td>
+            <td><%= dist.created_at.strftime("%m-%d %H:%M") %></td>
             <td align=center>
               <%= raw yes_no_bounce dist %>
               </td>
